<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile_guest_no_nickname">\@noname</string>
    <string name="profile_guest_no_file">Нет файла</string>
    <string name="no_name">Безымянный</string>
    <string name="recent_files">Недавние файлы</string>
    <string name="zero_files">0 файлов</string>
    <string name="images">Изображения</string>
    <string name="zero_images">0 изображений</string>
    <string name="files">Файлы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="zero_mb">0 МБ</string>
    <string name="default_date">01.01.1990</string>
    <string name="more_images">0+</string>
    <string name="profile_guest_delete_button">Удалить чат</string>
    <string name="profile_guest_delete_and_exit_button">Удалить и выйти из чата</string>

</resources>