<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp">

    <ImageView
        android:id="@+id/all_files_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_profile_guest_files_file"
        app:layout_constraintEnd_toStartOf="@+id/all_files_file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/all_files_file_name"
        style="@style/ProfileGuestFileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/profile_guest_no_file"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/all_files_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/all_files_file_size"
        style="@style/ProfileGuestFileCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/zero_mb"
        app:layout_constraintBottom_toBottomOf="@id/all_files_icon"
        app:layout_constraintStart_toEndOf="@+id/all_files_icon"
        app:layout_constraintTop_toBottomOf="@id/all_files_file_name" />

    <TextView
        android:id="@+id/all_files_file_date"
        style="@style/ProfileGuestFileCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>