<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_guest_files_appbar_height"
        android:background="@color/dark1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_back"
        app:title="@string/profile"
        app:titleTextAppearance="@style/ProfileGuestNickName" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark1"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_guest_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/avatar_container"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/profile_guest_avatar_margin_start_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/profile_guest_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_avatar_placeholder"
                        app:brightness="0.5" />

                    <ImageView
                        android:id="@+id/pick_photo_icon"
                        android:layout_width="20dp"
                        android:layout_height="18dp"
                        android:layout_alignLeft="@id/profile_guest_avatar"
                        android:layout_alignTop="@id/profile_guest_avatar"
                        android:layout_alignRight="@id/profile_guest_avatar"
                        android:layout_alignBottom="@id/profile_guest_avatar"
                        android:scaleX="0.3"
                        android:scaleY="0.3"
                        android:src="@drawable/ic_pick_photo" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/launch_facecall"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/shape_button_circle"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/launch_call"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatar_container"
                    app:srcCompat="@drawable/ic_facecall_60dp" />

                <ImageView
                    android:id="@+id/launch_call"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_button_circle"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/launch_facecall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/launch_facecall"
                    app:srcCompat="@drawable/ic_call_60dp" />

                <EditText
                    android:id="@+id/profile_guest_name"
                    style="@style/Text.White.18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="60dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:maxLength="22"
                    android:maxLines="2"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="10dp"
                    android:text="@string/no_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/avatar_container"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_guest_name_error"
                    style="@style/Text.Red.14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_empty_chat_name"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/profile_guest_name"
                    app:layout_constraintTop_toBottomOf="@id/profile_guest_name" />

                <ImageButton
                    android:id="@+id/profile_guest_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="18dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_guest_edit"
                    app:layout_constraintEnd_toEndOf="@+id/profile_guest_edit"
                    app:layout_constraintStart_toStartOf="@+id/profile_guest_edit"
                    app:layout_constraintTop_toTopOf="@+id/profile_guest_edit" />

                <TextView
                    android:id="@+id/profile_guest_phone"
                    style="@style/Text.Blue.16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/profile_guest_name_error"
                    app:layout_constraintTop_toBottomOf="@+id/profile_guest_name"
                    tools:text="+79876543210" />

                <TextView
                    android:id="@+id/profile_guest_nickname"
                    style="@style/Text.Blue.16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_guest_no_nickname"
                    app:layout_constraintStart_toStartOf="@id/profile_guest_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_guest_phone" />

                <ImageButton
                    android:id="@+id/profile_guest_video_chat"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_facecall_60dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar_container" />

                <ImageButton
                    android:id="@+id/profile_guest_call"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_call_60dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/profile_guest_video_chat" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_guest_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_guest_appbar">

                <FrameLayout
                    android:id="@+id/participants_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:id="@+id/recent_files_header"
                    layout="@layout/recent_files_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/participants_container" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_files_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:maxHeight="120dp"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="2dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recent_files_header"
                    tools:itemCount="2"
                    tools:listitem="@layout/recent_file_item" />

                <include
                    android:id="@+id/recent_images_header"
                    layout="@layout/recent_files_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recent_files_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_images_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="120dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recent_images_header"
                    tools:itemCount="1"
                    tools:listitem="@layout/recent_image_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDeleteChat"
                style="@style/ProfileGuestDeleteChat"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark2"
                android:drawableLeft="@drawable/ic_delete"
                android:drawablePadding="10dp"
                android:drawableTint="@color/red"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/profile_guest_delete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_guest_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
